--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An emoji interpreter, which provides either the emoji related to the text provided or text according to the emoji entered.",
   "author": "Abhijeet Singla",
   "private": true,
-  "dependencies": {
+  "devDependencies": {
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1"
